--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rustclock"
-version = "0.1.0"
+default-run = "festamp"
+version = "1.0.0"
 authors = ["Graham Breed <gbreed@gmail.com>"]
 edition = "2018"
 
