--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["strip"]
+
 [package]
 name = "rustclock"
 default-run = "festamp"
@@ -17,3 +19,4 @@ crate-type = ["cdylib", "rlib"]
 opt-level = "s"
 lto = true
 panic = 'abort'
+strip = true
